--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+
+* > * {
+  font-family: 'Didact Gothic', sans-serif;
+}
