--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
 
 * > * {
   font-family: 'Didact Gothic', sans-serif;
